--- a/src/INSTALL
+++ b/src/INSTALL
@@ -3,26 +3,18 @@ nQuakesv for Linux
 To install nQuakesv, locate the installer tarball and extract it.
 
 
-$ tar xvzf nquakesv12_installer.tar.gz
+$ tar xvzf nquakesv_installer-linux-latest.tar.gz
 
 
-Once you have extracted the package, change directory to the folder that was
-created (same as the package but without .tar.gz), run the install script and
-follow the instructions.
+Once you have extracted the package, run the install script.
 
-
-$ cd nquakesv12_installer/
 $ ./install_nquakesv.sh
-
 
 Follow the instructions and answer the questions. Do not simply press ENTER
 through the setup, or your server will be indistinguishable from others and
 very insecure. If you have access to a full version of Quake, please specify
 where pak1.pak is located to make the server more complete.
 
-After installation has completed, copy the crontab line to your crontab and
-your servers will be up and running in about 10 minutes.
-
 Thank you for downloading nQuakesv
 -
-2013-04-05
+2018-03-14
